Light, Image Object, and Compositor Backdrop Viewer Node gizmos are too big #74278

Closed
opened 2020-02-28 10:05:34 +01:00 by Scott Ramsay · 35 comments

System Information
Operating system: Linux-5.5.6-arch1-1-x86_64-with-arch 64 Bits
Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.59

Blender Version
Broken: version: 2.83 (sub 5), branch: master (modified), commit date: 2020-02-28 02:25, hash: 9cac5fa681
Breaking commit: 9cac5fa681

Short description of error
The corner handle on image objects are drawn too big in the viewport when moused over/near.
blender-bug.png

Screenshot from 2020-02-28 13-41-06.png

Exact steps for others to reproduce the error
Open the default scene.
Add > Image > Reference (use any image file)
Gigantic yellow boxes appear where the image object should be.
You may need to move your mouse closer to it if they don't show up.

color_test.png

bugreport.blend

**System Information** Operating system: Linux-5.5.6-arch1-1-x86_64-with-arch 64 Bits Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.59 **Blender Version** Broken: version: 2.83 (sub 5), branch: master (modified), commit date: 2020-02-28 02:25, hash: `9cac5fa681` Breaking commit: 9cac5fa681c55edcf6e856e59e07e90e2ae25965 **Short description of error** The corner handle on image objects are drawn too big in the viewport when moused over/near. ![blender-bug.png](https://archive.blender.org/developer/F8377441/blender-bug.png) ![Screenshot from 2020-02-28 13-41-06.png](https://archive.blender.org/developer/F8377920/Screenshot_from_2020-02-28_13-41-06.png) **Exact steps for others to reproduce the error** Open the default scene. Add > Image > Reference (use any image file) Gigantic yellow boxes appear where the image object should be. You may need to move your mouse closer to it if they don't show up. ![color_test.png](https://archive.blender.org/developer/F8377696/color_test.png) [bugreport.blend](https://archive.blender.org/developer/F8377698/bugreport.blend)
Author

Added subscriber: @smramsay

Added subscriber: @smramsay

#74379 was marked as duplicate of this issue

#74379 was marked as duplicate of this issue

#74382 was marked as duplicate of this issue

#74382 was marked as duplicate of this issue

#74370 was marked as duplicate of this issue

#74370 was marked as duplicate of this issue

#74363 was marked as duplicate of this issue

#74363 was marked as duplicate of this issue

#74357 was marked as duplicate of this issue

#74357 was marked as duplicate of this issue

#74341 was marked as duplicate of this issue

#74341 was marked as duplicate of this issue

#74336 was marked as duplicate of this issue

#74336 was marked as duplicate of this issue

#74306 was marked as duplicate of this issue

#74306 was marked as duplicate of this issue

#74311 was marked as duplicate of this issue

#74311 was marked as duplicate of this issue

#74289 was marked as duplicate of this issue

#74289 was marked as duplicate of this issue
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

I cannot repro, on the exact same version. Which file format are you importing ? I tried both png, jpg. They get inserted just fine. Please share the image file you chose.
Since you have deleted the cube, it is not the default scene. Please try after File > Defaults > load factory settings.

I cannot repro, on the exact same version. Which file format are you importing ? I tried both png, jpg. They get inserted just fine. Please share the image file you chose. Since you have deleted the cube, it is not the default scene. Please try after File > Defaults > load factory settings.
Author

Here's an image I tested with (though I tested with quite a few others) along with a blend file with it packed in.
Opening the latter instantly shows the yellow box.
I did a clean rebuild along with completely deleting the config directory and it still happens.
Reverting the mentioned commit fixes it.
Are you sure you're on the right commit? It was the very latest when I ran into it.
If you still can't reproduce it, I'll wait for the official builds to catch up to see if it's a problem with my build.

color_test.png

bugreport.blend

Here's an image I tested with (though I tested with quite a few others) along with a blend file with it packed in. Opening the latter instantly shows the yellow box. I did a clean rebuild along with completely deleting the config directory and it still happens. Reverting the mentioned commit fixes it. Are you sure you're on the right commit? It was the very latest when I ran into it. If you still can't reproduce it, I'll wait for the official builds to catch up to see if it's a problem with my build. ![color_test.png](https://archive.blender.org/developer/F8377696/color_test.png) [bugreport.blend](https://archive.blender.org/developer/F8377698/bugreport.blend)

Added subscribers: @ideasman42, @mano-wii

Added subscribers: @ideasman42, @mano-wii

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

The cause of this problem must be similar to that of #73369

The cause of this problem must be similar to that of #73369
Member

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k
Campbell Barton was assigned by Germano Cavalcante 2020-02-28 14:16:13 +01:00

Problems like this are getting frequent.
The patch only resolves one of them.

Problems like this are getting frequent. The patch only resolves one of them.
Member

Added subscriber: @TomG

Added subscriber: @TomG
Evan Wilson changed title from Image Object handles too big to Light, Image Object, and Compositor Backdrop Viewer Node gizmos are too big 2020-02-29 10:02:14 +01:00
Member

Added subscriber: @Eary

Added subscriber: @Eary
Member

Added subscriber: @AgileAardvark

Added subscriber: @AgileAardvark
Member

Added subscriber: @jl5086

Added subscriber: @jl5086
Member
Added subscribers: @ignietferro-1, @lichtwerk, @MarcinTwarowski
Campbell Barton was unassigned by Philipp Oeser 2020-03-02 11:32:04 +01:00
Philipp Oeser self-assigned this 2020-03-02 11:32:04 +01:00
Member

Caused by 9cac5fa681

Camera border gizmo size itself broke in 98e4fbc7cc

Lets see if I can fix these for good...

Caused by 9cac5fa681 Camera border gizmo size itself broke in 98e4fbc7cc Lets see if I can fix these for good...

Added subscribers: @dfelinto, @eyecandy, @Hjalti

Added subscribers: @dfelinto, @eyecandy, @Hjalti

Added subscriber: @brecht

Added subscriber: @brecht

Unless we can fix a fix quickly, please revert 9cac5fa681.

Unless we can fix a fix quickly, please revert 9cac5fa681.

This issue was referenced by dd4c0858f6

This issue was referenced by dd4c0858f63334e869f4ed9b288854d386711b1e

This issue was referenced by 360443a483

This issue was referenced by 360443a48346dc7c22fc6627849515da490b6e7b
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Added subscriber: @Hickz

Added subscriber: @Hickz

Added subscriber: @mrlemonyfresh

Added subscriber: @mrlemonyfresh

Added subscriber: @Vyach

Added subscriber: @Vyach
Thomas Dinges added this to the 2.83 LTS milestone 2023-02-08 16:39:35 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74278
No description provided.